[gd_scene load_steps=6 format=3 uid="uid://cb365dct8typ5"]

[ext_resource type="Script" uid="uid://bkr0j0g3830qs" path="res://Project/Systems/Out of Game/Deck Viewer/Deck Editor/Card Entry/card_entry.gd" id="1_ym1v0"]
[ext_resource type="Texture2D" uid="uid://ceqlygcgutnvk" path="res://Data/Assets/Art/KennysIcons/timer_0.png" id="2_0w5m2"]
[ext_resource type="StyleBox" uid="uid://coj1b4scfjvhq" path="res://Project/Systems/Global Systems/Style Boxes/style_box_empty.tres" id="3_bm1f6"]
[ext_resource type="StyleBox" uid="uid://qmek03n6xa2y" path="res://Project/Systems/Global Systems/Style Boxes/Labels/major_label_no_cm.tres" id="4_0w5m2"]
[ext_resource type="Script" uid="uid://40yovr3lwytr" path="res://Project/Systems/Global Systems/UI/AD Button/ad_button.gd" id="5_bm1f6"]

[node name="CardEntry" type="Control"]
custom_minimum_size = Vector2(275, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 50.0
script = ExtResource("1_ym1v0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_0w5m2")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountLabel" type="Label" parent="Panel/HBoxContainer/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_bm1f6")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="Panel/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("4_0w5m2")
text = "This card"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AD_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
script = ExtResource("5_bm1f6")
metadata/_custom_type_script = "uid://40yovr3lwytr"

[connection signal="button_down" from="AD_Button" to="." method="remove_copy"]
